<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
        android:id="@+id/register_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div">

        <!--账号-->
        <TextView
            android:id="@+id/register_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_username"
            />
        <EditText
            android:id="@+id/register_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:layout_below="@id/register_user_input"
            />
        <!--邮箱-->
        <TextView
            android:id="@+id/register_mail_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username_edit"
            android:layout_marginTop="5dp"
            android:text="@string/mail_hint"
            />
        <EditText
            android:id="@+id/register_mail_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="*邮箱"
            android:layout_below="@id/register_mail_input"
            />
        <!--身高数据-->
        <TextView
            android:id="@+id/height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_mail_edit"
            android:layout_marginTop="5dp"
            android:text="身高"
            />
        <EditText
            android:id="@+id/height_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_hint"
            android:layout_below="@id/height_input"
            android:inputType="text" />
        <!--体重数据-->
        <TextView
            android:id="@+id/weigh_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/height_edit"
            android:layout_marginTop="5dp"
            android:text="体重"
            />
        <EditText
            android:id="@+id/weigh_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weigh_hint"
            android:layout_below="@id/weigh_input"
            android:inputType="text"/>
        <!--输入密码-->
        <TextView
            android:id="@+id/register_password_input_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weigh_edit"
            android:text="@string/register_label_password_first"
            />
        <EditText
            android:id="@+id/register_password_edit_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input_first"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <!--确认密码-->
        <TextView
            android:id="@+id/register_password_input_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_edit_first"
            android:text="@string/rgister_login_label_password_second"
            />
        <EditText
            android:id="@+id/register_password_edit_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input_second"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <!--登录button-->
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_edit_second"
            android:layout_centerHorizontal="true"
            android:text="@string/register_sure"
            android:background="@drawable/button"/>

        <TextView
            android:id="@+id/login_link"
            android:text="@string/login_label_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register"
            android:layout_marginLeft="15dp"
            android:textColor="#888"
            />

    </RelativeLayout>

    </ScrollView>
</LinearLayout>
